--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="content-1" class="block flex-center info">
                 <div class="info-inner">
                     <div class="text-content">
-                        <h3 class="white-text item-margin main-title"><strong>MAKE A DIFFERENCE IN SOMEONE'S LIFE</strong></h3>
+                        <h3 class="white-text item-margin main-title nevis">MAKE A DIFFERENCE IN SOMEONE'S LIFE</h3>
                     </div>
                     <br>
                     <br>
@@ -50,7 +50,7 @@
                     </div>
                     <div id="sub-content-2" class="form item-margin form-content hidden">
                         <div class="row radio-group-row">
-                            <h6 class="text-center white-text"><strong>I BELONG TO A SINGAPORE UNIVERSITY / COLLEGE:</strong></h6>
+                            <h6 class="text-center white-text nevis">I BELONG TO A SINGAPORE UNIVERSITY / COLLEGE:</h6>
                             <div class="col-md-6">
                                 <div class="right">
                                     <div>
@@ -75,9 +75,9 @@
             <div id="content-2" class="block flex-center info hidden">
                 <div class="info-inner">
                     <div class="text-content">
-                        <h3 class="white-text item-margin"><b>THANK YOU FOR SIGNING UP!</b></h3>
+                        <h3 class="white-text item-margin nevis">THANK YOU FOR SIGNING UP!</h3>
                         <h6 class="white-text item-margin">We have added you to our mailing list :)</h6>
-                        <h3 class="white-text item-margin logo-font"><b>ban.tu</b></h3>
+                        <h3 class="white-text item-margin logo-font">ban.tu</h3>
                         <h6 class="white-text item-margin">will be launching very soon!</h6>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
     <section class="">
         <div class="section-wrapper">
             <div class="title-section">
-                <h4 class="text-center"><strong>What is ban.tu?</strong></h4>
+                <h4 class="text-center nevis">What is ban.tu?</h4>
                 <h6>Join us in gathering small efforts for a greater purpose
                     as we reinvent charity management in Singapore</h5>
             </div>
@@ -95,7 +95,7 @@
                 <div class="col-sm-4 card-wrapper">
                     <div class="card">
                         <div class="card-top">
-                            <h2 class="orange-text text-center no-margin">ban.tu</h2>
+                            <h2 class="orange-text text-center no-margin logo-font">ban.tu</h2>
                         </div>
                         <h6 class="item-margin">
                             was a name inspired by the Malay phrase “untuk membantu”, which translate as “to help”.
@@ -130,7 +130,7 @@
             <div class="row item-margin second-title-wrapper">
                 <div class="col-sm-8 card-wrapper ">
                     <div class="second-title">
-                        <h3><strong>We know you're busy in school...</strong></h3>
+                        <h3 class="nevis">We know you're busy in school...</h3>
                         <h6>but you want to contribute to the causes you care for</h6>
                     </div>
                     <div class="card">
@@ -151,7 +151,7 @@
     <section class="bg-pink">
         <div class="section-wrapper text-center white-text">
             <div class="i-m-scrollable-stuff">
-                <h2 class="pad-h-20"><strong>We're all different in the causes we care about...</strong></h2>
+                <h2 class="pad-h-20 nevis">We're all different in the causes we care about...</h2>
                 <h6>but we have the same heart to help others. We can help you to stay <b>connected</b> to your causes and meet other awesome people just like you!</h6>
                 <div class="credit-section">
                         <div class="gradient-overlay">    </div>
@@ -159,109 +159,109 @@
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Community</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Community</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Children</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Children</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Youth</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Youth</h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Advocacy & Human Rights</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Advocacy & Human Rights</h6>
                                 </div>
                             </div>
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Disaster Relief</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Disaster Relief</h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Education</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Education</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Literacy</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Literacy</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Health</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Health</h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Seniors</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Seniors</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Culture</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Culture</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Advocacy</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Advocacy</h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Immigrants & Refugees</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Immigrants & Refugees</h6>
                                 </div>
                             </div>
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Sports & Recreation</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Sports & Recreation</h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Women</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Women</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Disabled</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Disabled</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Homeless</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Homeless</h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Employment</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Employment</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Faith-Based</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Faith-Based</h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="dark-text shrink-mobile"><strong>Hunger</strong></h6>
+                                    <h6 class="dark-text shrink-mobile nevis">Hunger</h6>
                                 </div>
                             </div>
                         </div>
