--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:image" content="img/fb.png" />
+    <meta property="og:image" content="http://bantu.life/img/fb.png" />
 
     <title>Bantu</title>
     <!-- Bootstrap Core CSS -->
