--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <div id="content-1" class="block flex-center info">
                 <div class="info-inner">
                     <div class="text-content">
-                        <h3 class="white-text item-margin main-title nevis">MAKE A DIFFERENCE IN SOMEONE'S LIFE</h3>
+                        <h3 class="white-text item-margin nevis">HELPING OTHERS SHOULDN’T BE HARD</h3>
+                        <h5 class="white-text item-margin main-title">ban.tu helps you stay connected with the communities and causes you care about. Join us.</h5>
                     </div>
                     <br>
                     <br>
@@ -104,8 +105,9 @@
         <div class="section-wrapper">
             <div class="title-section">
                 <h4 class="text-center nevis">What is ban.tu?</h4>
-                <h6>Join us in gathering small efforts for a greater purpose
-                    as we reinvent charity management in Singapore</h5>
+                <h6>
+                    ban.tu is a charity management platform that aims to solve the problem of volunteer retention in Singapore.
+                </h6>
             </div>
             <div class="row item-margin">
                 <div class="col-sm-4 card-wrapper">
@@ -113,28 +115,31 @@
                         <div class="card-top">
                             <h2 class="orange-text text-center no-margin logo-font">ban.tu</h2>
                         </div>
-                        <h6 class="item-margin">
-                            was a name inspired by the Malay phrase “untuk membantu”, which translate as “to help”.
+                        <h5 class="bold">Why ban.tu?</h5>
+                        <h6 class="">
+                            ban.tu is a name inspired by the Malay phrase for “to help”. We help to bring volunteers and welfare organisations together in providing sustained assistance to people in need.
                         </h6>
                     </div>
                 </div>
                 <div class="col-sm-4 card-wrapper">
                     <div class="card">
                         <div class="card-top">
-                            <i class="fa fa-users fa-5x orange-text" aria-hidden="true"></i>
+                            <i class="fa fa-frown-o fa-5x orange-text" aria-hidden="true"></i>
                         </div>
-                        <h6 class="item-margin">
-                            The ban.tu mission is simple: to bring together good work and good people who are passionately involved in the causes they champion. 
+                        <h5 class="bold">Problem</h5>
+                        <h6 class="">
+                            High turnover rate of volunteers. This creates logistical problems for welfare organisations, and deepens the social disconnection between the people-in-need and the larger community.
                         </h6>
                     </div>
                 </div>
                 <div class="col-sm-4 card-wrapper">
                     <div class="card">
                         <div class="card-top">
-                            <i class="fa fa-link fa-5x orange-text" aria-hidden="true"></i>
+                            <i class="fa fa-hand-peace-o fa-5x orange-text" aria-hidden="true"></i>
                         </div>
-                        <h6 class="item-margin">
-                            Good people should stay connected & engaged with the groups they are volunteering their time with – and we provide VWOs the platform to do so.
+                        <h5 class="bold">Solution</h5>
+                        <h6 class="">
+                            ban.tu connects you to organisations that you find accessible, and makes it easy for you to remain actively involved with the communities and causes you care about.
                         </h6>
                     </div>
                 </div>
@@ -149,7 +154,7 @@
                         <h3 class="nevis">We know you're busy in school...</h3>
                         <h6>but you want to contribute to the causes you care for</h6>
                     </div>
-                    <div class="card">
+                    <div class="card mh-340">
                         <i class="fa fa-heart fa-5x red-text item-margin" aria-hidden="true"></i>
                         <div class="card-text-content">
                             <h6 class='text-center item-margin'>The ban.tu way is to remain up close and personal with the social causes you spend your Sunday afternoons at.</h6>
