--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div id="content-1" class="block flex-center info">
                 <div class="info-inner">
                     <div class="text-content">
-                        <h3 class="white-text item-margin nevis">HELPING OTHERS SHOULDN’T BE HARD</h3>
+                        <h3 class="white-text item-margin nevis">HELPING OTHERS SHOULD BE EASY</h3>
                         <h5 class="white-text item-margin main-title">ban.tu helps you stay connected with the communities and causes you care about. Join us.</h5>
                     </div>
                     <br>
@@ -146,25 +146,29 @@
             </div>
         </div>
     </section>
-    <section class="no-pad-top">
+    <section class="no-pad-top background-giving">
         <div class="section-wrapper">
-            <div class="row item-margin second-title-wrapper">
-                <div class="col-sm-8 card-wrapper ">
-                    <div class="second-title">
-                        <h3 class="nevis">We know you're busy in school...</h3>
-                        <h6>but you want to contribute to the causes you care for</h6>
+            <div class="row item-margin-xl">
+                <div class="col-sm-6 item-margin-xl">
+                    <div class="target-section1">
+                        <h4 class="bold">We are targeting</h4>
+                        <h2 class="orange-text item-margin-l bold">385, 000</h2>
+                        <h5>Youth volunteers</h5>
                     </div>
-                    <div class="card mh-340">
-                        <i class="fa fa-heart fa-5x red-text item-margin" aria-hidden="true"></i>
-                        <div class="card-text-content">
-                            <h6 class='text-center item-margin'>The ban.tu way is to remain up close and personal with the social causes you spend your Sunday afternoons at.</h6>
-                            <br>
-                            <h6 class="text-center">Everything is made better when you have a real relationship with the people & places you truly care about.</h6>
-                        </div>
+                    <div class="target-section2">
+                        <h2 class="orange-text bold">450</h2>
+                        <h5>Social Welfare Organizations</h5>
                     </div>
                 </div>
-                <div class="col-sm-4 card-wrapper">
-                    <img src="img/mobile.jpg" class="mobile-pic" alt="">
+                <div class="col-sm-6 item-margin-xl">
+                    <div class="center target-section3">
+                        <h4 class="bold">We're partnering</h4>
+                        <div class="item-margin partners">
+                            <img class="image-padding" src="./img/partner1.png" />
+                            <img class="image-padding" src="./img/partner2.png" />
+                            <img class="image-padding" src="./img/partner3.png" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
