--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="target-section1">
                         <h4 class="bold">We are targeting</h4>
                         <h2 class="orange-text item-margin-l bold">385, 000</h2>
-                        <h5>Youth volunteers</h5>
+                        <h5>Youth Volunteers</h5>
                     </div>
                     <div class="target-section2">
                         <h2 class="orange-text bold">450</h2>
