add NUS enterprise logo

--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@
                 <div class="col-sm-6 item-margin-xl">
                     <div class="target-section1">
                         <h4 class="bold">We are targeting</h4>
-                        <h2 class="orange-text item-margin-l bold">385, 000</h2>
+                        <br/>
+                        <h1 class="orange-text item-margin-l bold">385, 000</h1>
                         <h5>Youth Volunteers</h5>
                     </div>
                     <div class="target-section2">
-                        <h2 class="orange-text bold">450</h2>
+                        <h1 class="orange-text bold">450</h1>
                         <h5>Social Welfare Organizations</h5>
                     </div>
                 </div>
@@ -164,6 +165,7 @@
                     <div class="center target-section3">
                         <h4 class="bold">We're partnering</h4>
                         <div class="item-margin partners">
+                            <img class="image-padding" src="./img/partner4.png" />
                             <img class="image-padding" src="./img/partner1.png" />
                             <img class="image-padding" src="./img/partner2.png" />
                             <img class="image-padding" src="./img/partner3.png" />
