--- a/index.html
+++ b/index.html
@@ -384,14 +384,11 @@
         successCallback()
       })
       .done(function() {
-        alert("ok");
-
       })
       .fail(function() {
-        alert("test");
+        alert("There seems to be an error. Please contact us at han@bantu.life.");
       })
       .always(function() {
-
       });
     }
 
