--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/sweetalert.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/ico" href="./img/bantu_favicon.ico"/>
 
 </head>
 
